--- a/index.css
+++ b/index.css
@@ -28,6 +28,8 @@ body {
 .avatar img {
   width: 72px;
   height: 72px;
+  object-fit: cover;
+  object-position: 50% 50%;
   border-radius: 50%;
   margin-right: 68px;
   margin-bottom: 32px;
